Refactored Workspace and Workspace test ready to relocate lsp into its own module. Added checks to ensure types are present where they need to be, before we start creating the Intermediate Representation. Because without the types we cannot even make a start on the IR.